# MakeSalesLegendary

./: .env.example  .gitignore  CLAUDE.md  config.py  docker-compose.yml  main.py  requirements.txt
backend/: .env.example  pyproject.toml
backend/app/: auth.py  config.py  main.py  worker.py
backend/app/api/: analytics.py  chat.py  enrichment.py  events.py  harvest.py  leads.py  observatory.py  profiles.py  scoring.py
backend/app/integrations/: apollo.py  claude_llm.py  company_info.py  kvk.py  openkvk.py
backend/app/models/: __init__.py  company.py  enrichment.py  event.py  extraction_prompt.py  harvest.py  lead.py  profile.py  vacancy.py
backend/app/schemas/: chat.py  enrichment.py  event.py  lead.py  profile.py
backend/app/scrapers/: indeed.py  serpapi.py
backend/app/services/: chat_tools.py  dedup.py  enrichment.py  event_log.py  external_enrichment.py  extraction.py  harvester.py  scoring.py  seed.py
backend/app/utils/: api_cache.py  date_parser.py  ranges.py
backend/migrations/: env.py
backend/profiles/: accounts_payable.yaml
backend/tests/: conftest.py  test_api_cache.py  test_apollo.py  test_claude_llm.py  test_company_info.py  test_company_merge.py  test_date_parser.py  test_dedup.py  test_enrichment_api.py  test_enrichment_integration.py  test_enrichment_orchestration.py  test_external_enrichment.py  test_extraction_prompt_api.py  test_extraction_service.py  test_harvest_api.py  test_harvester.py  test_indeed.py  test_integration.py  test_kvk.py  test_openkvk.py  test_profiles.py  test_scoring.py  test_seed.py  test_serpapi.py
(+59 files in other folders)
